Add new TODO point

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -558,7 +558,8 @@
    "source": [
     "Next simulations: \n",
     "- add translational noise\n",
-    "- test tranlsational and rotational noise independently "
+    "- test tranlsational and rotational noise independently \n",
+    "- do L2 comparison between multimic and delayed spectra vs. translational / rotational noise "
    ]
   }
  ],
