Implement theoretical simulation and sweep/360 datasets

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -75,16 +75,15 @@
     "  exp_name = exp_name\n",
     ")\n",
     "for degree in [0, 27, 54, 81, 360]:\n",
-    "    for distance in [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]:\n",
+    "    for distance in [0, 10, 20, 30, 40, 50, 60, 70, 80, 90]:\n",
     "        for source in ['mono4125', None, 'sweep']:\n",
     "            try:\n",
     "                params['degree'] = degree\n",
     "                params['distance'] = distance\n",
     "                params['source'] = source\n",
+    "                params['appendix'] = \"\"\n",
     "                if distance in [10, 30, 50]:\n",
     "                    params['appendix'] = \"_new\"\n",
-    "                else:\n",
-    "                    params['appendix'] = \"\"\n",
     "                df, df_pos = read_df(**params)\n",
     "            except Exception as e:\n",
     "                continue \n",
@@ -98,8 +97,7 @@
     "                index_start = df.iloc[0]['index']\n",
     "                df_pos = df_pos.loc[df_pos.index >= index_start]\n",
     "            \n",
-    "            signals_f = np.array([*df.signals_f.values]) # times x \n",
-    "            print(signals_f.shape)\n",
+    "            signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
     "            frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
     "            frequencies = frequencies_matrix[0, :]\n",
     "            assert not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0))\n",
@@ -123,10 +121,7 @@
     "                frequencies=frequencies,\n",
     "                spec=spec,\n",
     "                psd=psd\n",
-    "            )\n",
-    "            break\n",
-    "        break\n",
-    "    break"
+    "            )"
    ]
   },
   {
@@ -135,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f'results/{exp_name}_wall.pkl'\n",
+    "fname = f'results/{exp_name}_real.pkl'\n",
     "pd.to_pickle(df_total, fname)\n",
     "print('saved as', fname)"
    ]
@@ -153,30 +148,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f'results/{exp_name}_wall.pkl'\n",
+    "fname = f'results/{exp_name}_real.pkl'\n",
+    "#fname = f'results/{exp_name}_simulated.pkl'\n",
     "df_total = pd.read_pickle(fname)\n",
     "frequencies = df_total.iloc[0].frequencies\n",
     "\n",
-    "print(df_total.distance.unique())\n",
-    "print(df_total.degree.unique())\n",
-    "print(df_total.source.unique())\n",
+    "try:\n",
+    "    row = df_total[(df_total.distance==90) & (df_total.degree==81) & (df_total.source=='sweep')].iloc[0]\n",
+    "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
     "\n",
-    "row = df_total[(df_total.distance==90) & (df_total.degree==81) & (df_total.source=='sweep')].iloc[0]\n",
-    "spec = get_spec(row.signals_f)\n",
+    "    plt.figure()\n",
+    "    times = np.arange(spec.shape[0])\n",
+    "    plt.pcolormesh(times, frequencies, np.log10(spec.T))\n",
     "\n",
-    "# spec\n",
-    "plt.figure()\n",
-    "times = np.arange(spec.shape[0])\n",
-    "plt.pcolormesh(times, frequencies, np.log10(spec.T))\n",
+    "    psd = get_psd(row.signals_f, ax=plt.gca())\n",
     "\n",
-    "psd = get_psd(row.signals_f, ax=plt.gca())\n",
-    "\n",
-    "plt.figure()\n",
-    "for i_mic in range(psd.shape[0]):\n",
-    "    plt.semilogy(frequencies, np.abs(psd[i_mic, :]), label=f\"mic{i_mic}\")\n",
-    "plt.xlabel('frequency [Hz]')\n",
-    "plt.ylabel('PSD')\n",
-    "plt.title(f'degree {degree}, distance {distance}')"
+    "    plt.figure()\n",
+    "    for i_mic in range(psd.shape[0]):\n",
+    "        plt.semilogy(frequencies, np.abs(psd[i_mic, :]), label=f\"mic{i_mic}\")\n",
+    "    plt.xlabel('frequency [Hz]')\n",
+    "    plt.ylabel('PSD')\n",
+    "    plt.title(f'degree {degree}, distance {distance}')\n",
+    "except:\n",
+    "    print('did not find 90, 81, sweep in')\n",
+    "    print(df_total.distance.unique())\n",
+    "    print(df_total.degree.unique())\n",
+    "    print(df_total.source.unique())"
    ]
   },
   {
@@ -242,8 +239,8 @@
     "            df_this = df_total.loc[(df_total.distance == distance)\n",
     "                                   & (df_total.degree == degree)\n",
     "                                   & (df_total.source == source)]\n",
-    "            #axs[mic].semilogy(frequencies, df_this.iloc[0].psd[mic], label=distance, color=f\"C{i}\")\n",
-    "            axs[mic].semilogy(frequencies, df_this.iloc[0].psd[mic] / psd_ref, label=distance, color=f\"C{i}\")\n",
+    "            axs[mic].semilogy(frequencies, df_this.iloc[0].psd[mic], label=distance, color=f\"C{i}\")\n",
+    "            #axs[mic].semilogy(frequencies, df_this.iloc[0].psd[mic] / psd_ref, label=distance, color=f\"C{i}\")\n",
     "            #axs[mic].plot(frequencies, df_this.iloc[0].psd[mic] - psd_ref, label=distance, color=f\"C{i}\")\n",
     "\n",
     "        #axs[mic].set_xlim(min(frequencies), max(frequencies))\n",
@@ -283,7 +280,8 @@
     "            ax.scatter(distance, row.psd[mic, chosen_idx], color=f\"C{f}\")\n",
     "    ax.set_title(degree)\n",
     "    #ax.set_yscale('log')\n",
-    "    ax.legend(chosen_frequencies)"
+    "    ax.legend(chosen_frequencies)\n",
+    "    ax.set_xlabel('distance [cm]')"
    ]
   },
   {
