--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -35,6 +35,10 @@
     "import pyroomacoustics as pra\n",
     "from audio_stack.beam_former import rotate_mics\n",
     "\n",
+    "DURATION_SEC = 38\n",
+    "N_TIMES = DURATION_SEC * FS // (N_BUFFER * 2)\n",
+    "print(N_TIMES)\n",
+    "\n",
     "def generate_rir(distance_cm=0, yaw_deg=0, single_mic=False, ax=None):\n",
     "    # simplification1: attenuation normally depends on pressure, humidity, frequency.\n",
     "    # simplification 2: no extra loss at wall\n",
@@ -104,7 +108,7 @@
     "        mic_positions = np.array(MIC_POSITIONS)\n",
     "        mic_positions = offset + rotate_mics(mic_positions, yaw_offset - yaw_deg)\n",
     "        \n",
-    "    signal = signals[key]\n",
+    "    signal = signals[source]\n",
     "            \n",
     "    room.add_source(offset, signal=signal)\n",
     "\n",
@@ -120,21 +124,83 @@
     "        ax.set_ylim(-0.1, 1.0)\n",
     "        ax.scatter(*offset, label='buzzer')\n",
     "        ax.legend()\n",
+    "        \n",
     "    return room\n",
     "\n",
     "\n",
-    "def get_signals_f(room, n_buffer=N_BUFFER):\n",
+    "def get_signals_f(room, n_buffer=N_BUFFER, n_times=N_TIMES):\n",
     "    room.simulate()\n",
-    "    signals_f = np.array(\n",
-    "        [\n",
-    "            pra.transform.stft.analysis(signal, N_BUFFER, N_BUFFER // 2).T\n",
-    "            for signal in room.mic_array.signals\n",
-    "        ]# n_mics x n_frequencies x n_times\n",
-    "    ).transpose(2, 0, 1)  # n_times, n_mics, n_frequencies\n",
-    "    return signals_f[:-10, ...]\n",
+    "    \n",
+    "    assert (n_times * n_buffer) < room.mic_array.signals.shape[1], f\"{n_times}*{n_buffer}, {room.mic_array.signals.shape}\"\n",
+    "    \n",
+    "    signals_f_list = []\n",
+    "    idx = 0\n",
+    "    for _ in range(n_times):\n",
+    "        signals_f = np.fft.rfft(room.mic_array.signals[:, idx:idx+n_buffer], axis=1)\n",
+    "        signals_f_list.append(signals_f[None, ...])\n",
+    "        idx += n_buffer\n",
+    "    signals_f = np.concatenate(signals_f_list, axis=0)\n",
+    "    return signals_f\n",
     "\n",
     "def get_frequencies(fs, n_buffer=N_BUFFER):\n",
-    "    return np.arange(N_BUFFER // 2 + 1) * fs / N_BUFFER"
+    "    return np.fft.rfftfreq(n_buffer, 1/fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bin_selection import select_frequencies\n",
+    "\n",
+    "def buzzer_signal(source):\n",
+    "    from signals import generate_signal\n",
+    "    kwargs = dict(\n",
+    "        duration_sec=DURATION_SEC, \n",
+    "        max_dB=-10,\n",
+    "        Fs=FS,\n",
+    "    )\n",
+    "    if source == 'mono4125':\n",
+    "        return generate_signal(signal_type='mono', frequency_hz=4125, **kwargs)\n",
+    "    elif source == 'random':\n",
+    "        return generate_signal(signal_type='random', **kwargs)\n",
+    "    elif source == 'multi':\n",
+    "        frequencies = get_frequencies(FS)\n",
+    "        phase = np.random.uniform(0, 2*np.pi)\n",
+    "        signal = generate_signal(signal_type='mono', frequency_hz=frequencies[1], **kwargs, phase_offset=phase)\n",
+    "        for f in frequencies[2:]:\n",
+    "            phase = np.random.uniform(0, 2*np.pi)\n",
+    "            signal += generate_signal(signal_type='mono', frequency_hz=f, **kwargs, phase_offset=phase)\n",
+    "        return signal\n",
+    "    elif source == 'sweep':\n",
+    "        frequencies = get_frequencies(FS)\n",
+    "        min_freq = 100\n",
+    "        max_freq = 4400\n",
+    "        bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
+    "        \n",
+    "        signal = np.zeros(int(FS * kwargs['duration_sec']))\n",
+    "        kwargs['duration_sec'] = 0.5\n",
+    "        \n",
+    "        idx = 0\n",
+    "        for f in frequencies[bins]:\n",
+    "            mono = generate_signal(signal_type='mono', frequency_hz=f, **kwargs)\n",
+    "            signal[idx:idx+len(mono)] = mono\n",
+    "            idx += len(mono)\n",
+    "        return signal\n",
+    "    else:\n",
+    "        raise ValueError(source)\n",
+    "    \n",
+    "signals = {}\n",
+    "for key in ['mono4125', 'random', 'multi', 'sweep']:\n",
+    "    try:\n",
+    "        signal = pd.read_pickle(f'results/{key}.pk')\n",
+    "        print(f'read {key}')\n",
+    "    except:\n",
+    "        signal = buzzer_signal(key)\n",
+    "        pd.to_pickle(signal, f'results/{key}.pk')\n",
+    "        print(f'saved {key}')\n",
+    "    signals[key] = signal"
    ]
   },
   {
@@ -162,43 +228,6 @@
     "    interactive_plot = interact(update_figure, \n",
     "                                slice_f=IntSlider(200, min=0, max=len(frequencies), continuous_update=False), \n",
     "                                slice_d=IntSlider(50, min=0, max=len(distances), continuous_update=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def buzzer_signal(source):\n",
-    "    from signals import generate_signal\n",
-    "    kwargs = dict(\n",
-    "        duration_sec=30, \n",
-    "        max_dB=-10,\n",
-    "        Fs=FS,\n",
-    "    )\n",
-    "    if source == 'mono4125':\n",
-    "        return generate_signal(signal_type='mono', frequency_hz=4125, **kwargs)\n",
-    "    elif source == 'random':\n",
-    "        return generate_signal(signal_type='random', **kwargs)\n",
-    "    elif source == 'multi':\n",
-    "        frequencies = get_frequencies(FS)\n",
-    "        phase = np.random.uniform(0, 2*np.pi)\n",
-    "        signal = generate_signal(signal_type='mono', frequency_hz=frequencies[1], **kwargs, phase_offset=phase)\n",
-    "        for f in frequencies[2:]:\n",
-    "            phase = np.random.uniform(0, 2*np.pi)\n",
-    "            signal += generate_signal(signal_type='mono', frequency_hz=f, **kwargs, phase_offset=phase)\n",
-    "        return signal\n",
-    "\n",
-    "    \n",
-    "signals = {}\n",
-    "for key in ['mono4125', 'random', 'multi']:\n",
-    "    try:\n",
-    "        signal = pd.read_pickle(f'results/{key}.pk')\n",
-    "    except:\n",
-    "        signal = buzzer_signal(key)\n",
-    "        pd.to_pickle(signal, f'results/{key}.pk')\n",
-    "    signals[key] = signal"
    ]
   },
   {
@@ -247,7 +276,9 @@
    "outputs": [],
    "source": [
     "#room = generate_room(distance_cm=50, single_mic=True, source='random')\n",
-    "room = generate_room(distance_cm=50, single_mic=True, source='multi')\n",
+    "#room = generate_room(distance_cm=50, single_mic=True, source='multi')\n",
+    "#room = generate_room(distance_cm=50, single_mic=True, source='mono4125')\n",
+    "room = generate_room(distance_cm=50, single_mic=True, source='sweep')\n",
     "signals_f = get_signals_f(room)\n",
     "frequencies = get_frequencies(room.fs)\n",
     "\n",
@@ -271,6 +302,8 @@
     "n_times = 500\n",
     "times = np.arange(n_times) / FS\n",
     "plt.plot(times, room.rir[0][0][:n_times])\n",
+    "plt.title('room impulse response')\n",
+    "plt.xlabel('time [s]')\n",
     "plt.show()"
    ]
   },
@@ -343,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment twin"
+    "# Experiment twins"
    ]
   },
   {
@@ -352,38 +385,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import progressbar \n",
+    "\n",
     "df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
     "\n",
     "exp_name = '2020_11_23_wall2'; \n",
     "source = 'mono4125'\n",
+    "#source = 'sweep'\n",
     "n_times = 300\n",
     "\n",
-    "frequencies = get_frequencies(FS)\n",
+    "min_freq=100\n",
+    "max_freq=4400\n",
+    "bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
+    "frequencies = get_frequencies(FS)[bins]\n",
+    "print(frequencies)\n",
     "\n",
-    "for distance_cm in np.arange(100, step=10):\n",
-    "    for degree in [0, 27, 54, 81]:\n",
-    "        room = generate_room(distance_cm=distance_cm, yaw_deg=degree)\n",
+    "# which sources to play at which angle\n",
+    "degree_list = [0, 27, 54, 81, 360]\n",
+    "sources = {\n",
+    "    deg: 'mono4125' if deg == 360 else 'sweep' for deg in degree_list \n",
+    "}\n",
+    "distance_list = np.arange(100, step=10)\n",
     "\n",
-    "        N_BUFFER = 2**10\n",
-    "        signals_f = get_signals_f(room)[:n_times]\n",
+    "idx_all = 0\n",
+    "with progressbar.ProgressBar(max_value=len(distance_list) * len(degree_list)) as bar:\n",
+    "    for distance_cm in distance_list:\n",
+    "        for degree in degree_list:\n",
+    "            if degree == 360:\n",
+    "                signals_f = np.empty((0, 4, len(frequencies)))\n",
     "\n",
-    "        yaw = np.full(signals_f.shape[0], -degree)\n",
+    "                # we want to be done with a turn of 360 degrees in ca. 90 steps.\n",
+    "                degrees = np.linspace(0, 360, 90)\n",
+    "                for deg in degrees:\n",
+    "                    room = generate_room(distance_cm=distance_cm, yaw_deg=deg, source=sources[degree])\n",
+    "                    sig_f = get_signals_f(room, n_times=1)[:, :, bins]\n",
+    "                    signals_f = np.concatenate([sig_f, signals_f], axis=0)\n",
     "\n",
-    "        spec = np.sum(np.abs(signals_f), axis=1)\n",
+    "                # fill the leftover buffer with measurements at 360\n",
+    "                sig_f = get_signals_f(room, n_times=N_TIMES)[:, :, bins]\n",
+    "                n_buffer_wait = int(FS * (DURATION_SEC - (signals_f.shape[0] * N_BUFFER * 2 / FS)) // (N_BUFFER * 2))\n",
+    "                signals_f = np.concatenate([sig_f[:n_buffer_wait, ...], signals_f])\n",
     "\n",
-    "        # TODO(FD): implement if needed. \n",
-    "        psd = None \n",
+    "                yaw = np.full(signals_f.shape[0], -360)\n",
+    "                yaw[:len(degrees)] = -degrees\n",
+    "            else:\n",
+    "                room = generate_room(distance_cm=distance_cm, yaw_deg=degree, source=sources[degree])\n",
+    "                signals_f = get_signals_f(room)[:, :, bins]\n",
+    "                yaw = np.full(signals_f.shape[0], -degree)\n",
     "\n",
-    "        df_total.loc[len(df_total), :] = dict(\n",
-    "            degree=degree,\n",
-    "            yaw=yaw,\n",
-    "            distance=distance_cm,\n",
-    "            source=str(source),\n",
-    "            signals_f=signals_f,\n",
-    "            frequencies=frequencies,\n",
-    "            spec=spec,\n",
-    "            psd=psd\n",
-    "        ) \n",
+    "            spec = np.sum(np.abs(signals_f), axis=1)\n",
+    "            # TODO(FD): implement if needed. \n",
+    "            psd = None \n",
+    "\n",
+    "            df_total.loc[len(df_total), :] = dict(\n",
+    "                degree=degree,\n",
+    "                yaw=yaw,\n",
+    "                distance=distance_cm,\n",
+    "                source=str(source),\n",
+    "                signals_f=signals_f,\n",
+    "                frequencies=frequencies,\n",
+    "                spec=spec,\n",
+    "                psd=psd\n",
+    "            ) \n",
+    "            idx_all += 1\n",
+    "            bar.update(idx_all)\n",
     "        \n",
     "fname = f'results/{exp_name}_simulated.pkl'\n",
     "pd.to_pickle(df_total, fname)\n",
