--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -300,10 +300,10 @@
     "room.compute_rir()\n",
     "\n",
     "n_times = 500\n",
-    "times = np.arange(n_times) / FS\n",
+    "times = np.arange(n_times) / FS * 1e3\n",
     "plt.plot(times, room.rir[0][0][:n_times])\n",
     "plt.title('room impulse response')\n",
-    "plt.xlabel('time [s]')\n",
+    "plt.xlabel('time [ms]')\n",
     "plt.show()"
    ]
   },
@@ -321,8 +321,7 @@
    "outputs": [],
    "source": [
     "distances = np.linspace(0, 50, 100)\n",
-    "delta_f = 30\n",
-    "frequencies = get_frequencies(FS)[delta_f:-delta_f]\n",
+    "frequencies = get_frequencies(FS)\n",
     "df_matrix = np.empty((len(frequencies), len(distances)))\n",
     "\n",
     "for j, distance_cm in enumerate(distances):\n",
@@ -331,7 +330,7 @@
     "    signals_f = get_signals_f(room)\n",
     "    spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER)\n",
     "    spec_time_avg = np.mean(spec, axis=0)\n",
-    "    df_matrix[:, j] = spec_time_avg[delta_f:-delta_f]"
+    "    df_matrix[:, j] = spec_time_avg"
    ]
   },
   {
@@ -340,23 +339,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
-    "plt.pcolormesh(distances, frequencies, np.log10(df_matrix))\n",
-    "matrix_slices(df_matrix, frequencies, distances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distances_theo = np.linspace(0, 50, 100)\n",
+    "frequencies_theo = get_frequencies(FS)\n",
+    "df_matrix_theo = np.empty((len(frequencies_theo), len(distances)))\n",
     "\n",
-    "frequencies_theo = get_frequencies(FS)[delta_f:-delta_f]\n",
-    "df_matrix_theo = np.empty((len(frequencies_theo), len(distances_theo)))\n",
-    "\n",
-    "for j, distance_cm in enumerate(distances_theo):\n",
+    "for j, distance_cm in enumerate(distances):\n",
     "    H = generate_rir(distance_cm=distance_cm, single_mic=True)[0]\n",
     "    df_matrix_theo[:, j] = np.abs(H)"
    ]
@@ -368,8 +354,20 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.pcolormesh(distances_theo, frequencies_theo, np.log10(df_matrix_theo))\n",
-    "matrix_slices(df_matrix_theo, frequencies_theo, distances_theo)"
+    "freq_start = 5 \n",
+    "plt.pcolormesh(distances, frequencies[freq_start:], np.log10(df_matrix[freq_start:]))\n",
+    "matrix_slices(df_matrix[freq_start:], frequencies[freq_start:], distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.pcolormesh(distances, frequencies_theo[freq_start:], np.log10(df_matrix_theo[freq_start:]))\n",
+    "matrix_slices(df_matrix_theo[freq_start:], frequencies_theo[freq_start:], distances)"
    ]
   },
   {
